Endless updater update fix?

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "project": "CreateBigCannons Turret Suite",
+  "project": "CreateBigCannons Autolocking Turret",
   "files": {
     "updater": {
       "version": "2.0",
